GSvar: updated germline report

--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -64,10 +64,14 @@ p
 <br />CNVs selected for report: 2
 <br />SVs selected for report: 3
 </p>
-<br />In addition to likely pathogenic variants (class 4) and pathogenic variants (class 5), the following tables contains only those variants of uncertain significance (class 3), for which a contribution to the clinical symptoms of the patient is conceivable and for which a further evaluation of the clinical relevance by follow-up examinations may be useful.  A list of all detected variants can be provided on request.
+<br />If present, the following tables contain: likely pathogenic variants (class 4)<sup>*</sup> and pathogenic variants (class 5)<sup>*</sup>, for which a contribution to the clinical symptoms of the patient is conceivable, and variants of uncertain significance (class 3)<sup>*</sup>, for which a further evaluation of the clinical relevance by follow-up examinations may be useful.
+Depending on the type of genetic alteration, family history and clinical features of the patient further investigations might change the classification of variants.
+<br />A (uncommented) list of all detected variants can be provided on request.
+<br />In case of a suspected clinical diagnosis genetic counseling is necessary to evaluate the indication/possibility of further genetic studies.
+<br /><sup>*</sup> For information on the classification of variants, see the general information.
 <br /><br /><b>List of prioritized small variants</b>
 <table>
-<tr><td><b>Variant</b></td><td><b>Genotype</b></td><td><b>Genes</b></td><td><b>Details</b></td><td><b>Class</b></td><td><b>Inheritance</b></td><td><b>gnomAD AF</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>Variant</b></td><td><b>Genotype</b></td><td><b>Genes</b></td><td><b>Details</b></td><td><b>Class</b></td><td><b>Inheritance</b></td><td><b>gnomAD allele frequency<br />(control cohort)</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>
 chr13:40793233&nbsp;T&nbsp;&gt;&nbsp;A</td><td>hom (comp-het)</td>
@@ -162,10 +166,6 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 </td>
 </tr>
 </table>
-<p>For further information regarding the classification see Additional Information.
-</p>
-<p>Depending on the type of genetic alteration, family history and clinical features of the patient further investigations might change the classification of variants of unknown significance (class 3). In case of a suspected clinical diagnosis genetic counseling is necessary to evaluate the indication/possibility of further genetic studies.
-</p>
 
 <p><b>Classification of variants:</b>
 <br />Classification and interpretation of variants: The classification of variants is based on the criteria of Plon et al. (PMID: 18951446). A short description of each class can be found in the following
