--- a/src/cppNGSD-TEST/data_out/germline_report1.html
+++ b/src/cppNGSD-TEST/data_out/germline_report1.html
@@ -58,23 +58,23 @@ p
 <br />Anzahl CNVs ausgew&auml;hlt f&uuml;r Report: 0
 <br />Anzahl SVs ausgew&auml;hlt f&uuml;r Report: 0
 </p>
-<br />In den folgenden Tabellen werden neben wahrscheinlich pathogenen (Klasse 4) und pathogenen (Klasse 5) nur solche Varianten unklarer klinischer Signifikanz (Klasse 3) gelistet, f&uuml;r die in Zusammenschau von Literatur und Klinik des Patienten ein Beitrag zur Symptomatik denkbar ist und f&uuml;r die gegebenenfalls eine weitere Einordnung der klinischen Relevanz durch Folgeuntersuchungen sinnvoll ist. Eine Liste aller detektierten Varianten kann bei Bedarf angefordert werden.
+<br />Sofern vorhanden, werden in den nachfolgenden Tabellen erfasst: pathogene Varianten (Klasse 5)<sup>*</sup> und wahrscheinlich pathogene Varianten (Klasse 4)<sup>*</sup>, bei denen jeweils ein Zusammenhang mit der klinischen Fragestellung anzunehmen ist, sowie Varianten unklarer klinischer Signifikanz (Klasse 3)<sup>*</sup> f&uuml;r welche in Zusammenschau von Literatur und Klinik des Patienten ein Beitrag zur Symptomatik denkbar ist und f&uuml;r die gegebenenfalls eine weitere Einordnung der klinischen Relevanz durch Folgeuntersuchungen sinnvoll erscheint.
+Teilweise k&ouml;nnen - in Abh&auml;ngigkeit von der Art der genetischen Ver&auml;nderung, der Familienanamnese und der Klinik der Patientin/des Patienten - weiterf&uuml;hrende Untersuchungen eine &Auml;nderung der Klassifizierung bewirken.
+<br />Eine (unkommentierte) Liste aller detektierten Varianten kann bei Bedarf angefordert werden.
+<br />Bei konkreten differentialdiagnostischen Hinweisen auf eine konkrete Erkrankung k&ouml;nnen ggf. weiterf&uuml;hrende genetische Untersuchungen bzw. Untersuchungsmethoden indiziert sein.
+<br /><sup>*</sup> F&uuml;r Informationen zur Klassifizierung von Varianten, siehe allgemeine Zusatzinformationen.
 <br /><br /><b>Einzelbasenver&auml;nderungen (SNVs) und Insertionen/Deletionen (InDels) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
-<tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>gnomAD AF</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>gnomAD Allelfrequenz<br />(Kontrollkohorte)</b></td><td><b>RNA</b></td></tr>
 <tr><td colspan="8">Keine</td></tr></table>
 <br /><b>Kopienzahlver&auml;nderungen (CNV) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
-<tr><td><b>CNV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Kopienzahl</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>CNV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Kopienzahl</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>RNA</b></td></tr>
 <tr><td colspan="8">Keine</td></tr></table>
 <br /><b>Strukturver&auml;nderungen (SV) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
-<tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>RNA</b></td></tr>
 <tr><td colspan="8">Keine</td></tr></table>
-<p>F&uuml;r Informationen zur Klassifizierung von Varianten, siehe allgemeine Zusatzinformationen.
-</p>
-<p>Teilweise k&ouml;nnen bei Varianten unklarer Signifikanz (Klasse 3) -  in Abh&auml;ngigkeit von der Art der genetischen Ver&auml;nderung, der Familienanamnese und der Klinik des/der Patienten - weiterf&uuml;hrende Untersuchungen eine &Auml;nderung der Klassifizierung bewirken. Bei konkreten differentialdiagnostischen Hinweisen auf eine entsprechende Erkrankung k&ouml;nnen ggf. weiterf&uuml;hrende genetische Untersuchungen indiziert sein.
-</p>
 
 <p><b>Polygener Risiko-Score (PRS)</b></p>
 <table>
