--- a/src/cppNGSD-TEST/data_out/germline_report2.html
+++ b/src/cppNGSD-TEST/data_out/germline_report2.html
@@ -64,10 +64,14 @@ p
 <br />Anzahl CNVs ausgew&auml;hlt f&uuml;r Report: 2
 <br />Anzahl SVs ausgew&auml;hlt f&uuml;r Report: 3
 </p>
-<br />In den folgenden Tabellen werden neben wahrscheinlich pathogenen (Klasse 4) und pathogenen (Klasse 5) nur solche Varianten unklarer klinischer Signifikanz (Klasse 3) gelistet, f&uuml;r die in Zusammenschau von Literatur und Klinik des Patienten ein Beitrag zur Symptomatik denkbar ist und f&uuml;r die gegebenenfalls eine weitere Einordnung der klinischen Relevanz durch Folgeuntersuchungen sinnvoll ist. Eine Liste aller detektierten Varianten kann bei Bedarf angefordert werden.
+<br />Sofern vorhanden, werden in den nachfolgenden Tabellen erfasst: pathogene Varianten (Klasse 5)<sup>*</sup> und wahrscheinlich pathogene Varianten (Klasse 4)<sup>*</sup>, bei denen jeweils ein Zusammenhang mit der klinischen Fragestellung anzunehmen ist, sowie Varianten unklarer klinischer Signifikanz (Klasse 3)<sup>*</sup> f&uuml;r welche in Zusammenschau von Literatur und Klinik des Patienten ein Beitrag zur Symptomatik denkbar ist und f&uuml;r die gegebenenfalls eine weitere Einordnung der klinischen Relevanz durch Folgeuntersuchungen sinnvoll erscheint.
+Teilweise k&ouml;nnen - in Abh&auml;ngigkeit von der Art der genetischen Ver&auml;nderung, der Familienanamnese und der Klinik der Patientin/des Patienten - weiterf&uuml;hrende Untersuchungen eine &Auml;nderung der Klassifizierung bewirken.
+<br />Eine (unkommentierte) Liste aller detektierten Varianten kann bei Bedarf angefordert werden.
+<br />Bei konkreten differentialdiagnostischen Hinweisen auf eine konkrete Erkrankung k&ouml;nnen ggf. weiterf&uuml;hrende genetische Untersuchungen bzw. Untersuchungsmethoden indiziert sein.
+<br /><sup>*</sup> F&uuml;r Informationen zur Klassifizierung von Varianten, siehe allgemeine Zusatzinformationen.
 <br /><br /><b>Einzelbasenver&auml;nderungen (SNVs) und Insertionen/Deletionen (InDels) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
-<tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>gnomAD AF</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>gnomAD Allelfrequenz<br />(Kontrollkohorte)</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>
 chr13:40793233&nbsp;T&nbsp;&gt;&nbsp;A</td><td>hom (comp-het)</td>
@@ -95,7 +99,7 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 </table>
 <br /><b>Kopienzahlver&auml;nderungen (CNV) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
-<tr><td><b>CNV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Kopienzahl</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>CNV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Kopienzahl</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>Deletion</td>
 <td>chr21:10541092-10649856</td>
@@ -119,7 +123,7 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 </table>
 <br /><b>Strukturver&auml;nderungen (SV) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
-<tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Vererbung</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>Insertion</td>
 <td>chr1:934143-934144</td>
@@ -150,7 +154,7 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 </table>
 <p>&nbsp;</p>
 <table>
-<tr><td><b>Variantentyp</b></td><td><b>Regionen</b></td><td><b>Gen(e)</b></td><td><b>Vererbung</b></td><td><b>Kommentar</b></td></tr>
+<tr><td><b>Variantentyp</b></td><td><b>Regionen</b></td><td><b>Gen(e)</b></td><td><b>Erbgang</b></td><td><b>Kommentar</b></td></tr>
 <tr>
 <td>nicht-detektierte CNV</td>
 <td>chr2:123456-789012</td>
@@ -162,10 +166,6 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 </td>
 </tr>
 </table>
-<p>F&uuml;r Informationen zur Klassifizierung von Varianten, siehe allgemeine Zusatzinformationen.
-</p>
-<p>Teilweise k&ouml;nnen bei Varianten unklarer Signifikanz (Klasse 3) -  in Abh&auml;ngigkeit von der Art der genetischen Ver&auml;nderung, der Familienanamnese und der Klinik des/der Patienten - weiterf&uuml;hrende Untersuchungen eine &Auml;nderung der Klassifizierung bewirken. Bei konkreten differentialdiagnostischen Hinweisen auf eine entsprechende Erkrankung k&ouml;nnen ggf. weiterf&uuml;hrende genetische Untersuchungen indiziert sein.
-</p>
 
 <p><b>Klassifikation von Varianten:</b>
 <br />Die Klassifikation der Varianten erfolgt in Anlehnung an die Publikation von Plon et al. (Hum Mutat 2008)
