--- a/src/cppNGSD-TEST/data_out/germline_report4.html
+++ b/src/cppNGSD-TEST/data_out/germline_report4.html
@@ -54,7 +54,7 @@ p
 <p><b>Zielregion</b>
 <br /><span style="font-size: 8pt;">Die Zielregion umfasst mindestens die CCDS ("consensus coding sequence") unten genannter Gene &plusmn;20 Basen flankierender intronischer Sequenz, kann aber auch zus&auml;tzliche Exons und/oder flankierende Basen beinhalten.
 <br />Name: panel
-<br />Ausgewertete Gene (3): siehe Abdeckungsstatistik
+<br />Ausgewertete Gene: 3 (siehe Abdeckungsstatistik)
 </span></p>
 
 <p><b>Filterkriterien </b>
@@ -176,12 +176,15 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <br /><b>Klasse 1: Benigne Ver&auml;nderungen:</b> Werden nicht mitgeteilt, k&ouml;nnen aber erfragt werden.
 </p>
 
-<p><b>Abdeckungsstatistik</b>
+<p><b>Abdeckungsstatistik Zielregion</b>
 <br />Durchschnittliche Sequenziertiefe: 125.47
 <br />Durchschnittliche Sequenziertiefe (chrMT): 0.00
 </p>
+<p><b>L&uuml;ckenreport Zielregion</b>
+<br />Basen: 271536
+<br />Basen mit Tiefe &lt;20: 15449
+<br />Prozent L&uuml;cken: 5.69%
 <br />Komplett abgedeckte Gene: 
-<br />Anteil Regionen mit Tiefe &lt;20: 5.69%
 <br />Unvollst&auml;ndig abgedeckte Gene (fehlende Basen in bp): CYP7B1 <span style="font-size: 8pt;">(243)</span>, SLC25A15 <span style="font-size: 8pt;">(129)</span>, SPG7 <span style="font-size: 8pt;">(126)</span>
 <p>Details Regionen mit Tiefe &lt;20:
 </p>
@@ -202,31 +205,10 @@ SLC25A15</td><td>129</td><td>chr13</td><td>40799186-40799314
 SPG7</td><td>126</td><td>chr16</td><td>89524046-89524104, 89554476-89554542
 </td>
 </tr>
+<tr>
+<td>kein &Uuml;berlappung mit Gen</td><td>14951</td><td>-</td><td>-</td>
+</tr>
 </table>
-
-<p><b>Abdeckungsstatistik der RNA-Probe</b>
-<br />Anzahl der Reads: 10.99 Mio
-<br />Durchschnittliche Sequenziertiefe: 15.85
-<br />Durchschnittliche Sequenziertiefe der Housekeeping-Gene: 263.87
-<br />Abgedeckte Gene: 136985
-</p>
-
-<br /><b>Abdeckungsstatistik f&uuml;r CCDS </b>
-<br />
-CCDS gesamt: 4815
-<br />CCDS mit Tiefe &ge;20: 4347 (90.28%)
-<br />CCDS mit Tiefe &lt;20: 468 (9.72%)
-<br />
-<br /><b>Abdeckungsstatistik f&uuml;r CCDS  +-5 </b>
-<table>
-<tr><td><b>Gen</b></td><td><b>Transcript</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Basen</b></td><td><b>Chromosom</b></td><td><b>Koordinaten (hg38)</b></td></tr><tr><td>CYP7B1</td><td>ENST00000310193.1</td><td>1581</td><td>233</td><td>chr8</td><td>64615713-64615740, 64616216-64616218, 64624398-64624515, 64798461-64798544</td></tr><tr><td>SLC25A15</td><td>ENST00000338625.1</td><td>966</td><td>129</td><td>chr13</td><td>40799186-40799314</td></tr><tr><td>SPG7</td><td>ENST00000268704.1</td><td>2558</td><td>121</td><td>chr16</td><td>89524046-89524104, 89554481-89554542</td></tr></table>
-CCDS  +-5 gesamt: 5105
-<br />CCDS  +-5 mit Tiefe &ge;20: 4622 (90.54%)
-<br />CCDS  +-5 mit Tiefe &lt;20: 483 (9.46%)
-<br /><br />Komplett abgedeckte Gene: 
-<br /><br />Unvollst&auml;ndig abgedeckte Gene (fehlende Basen in bp): CYP7B1 <span style="font-size: 8pt;">(233)</span>, SLC25A15 <span style="font-size: 8pt;">(129)</span>, SPG7 <span style="font-size: 8pt;">(121)</span>
-
-<p><b>L&uuml;ckenschluss</b></p>
 <br />L&uuml;cken die mit Sanger-Sequenzierung geschlossen wurden:<br /><table>
 <tr><td><b>Gen</b></td><td><b>Basen</b></td><td><b>Chromosom</b></td><td><b>Koordinaten (hg38)</b></td></tr>
 <tr>
@@ -240,8 +222,60 @@ Basen gesamt:59<p>L&uuml;cken die mit visueller Inspektion der Rohdaten &uuml;be
 <td>CYP7B1</td><td>3</td><td>chr8</td><td>64616216-64616218</td></tr>
 </table>
 Basen gesamt:31</p>
-<p>Anteil Regionen mit Tiefe &lt;20 nach L&uuml;ckenschluss: 5.66%
+<p>Basen mit Tiefe &lt;20 nach L&uuml;ckenschluss: 15359
+<br />Prozent L&uuml;cken nach L&uuml;ckenschluss: 5.66%
+</p></p>
+<p><b>L&uuml;ckenreport basierend auf Exons</b>
+<br />Gene f&uuml;r die kein CCDS-Transkript vorhanden ist und daher Ensembl-Transkripte genutzt wurden: CYP7B1, SLC25A15, SPG7
+<br />Basen: 6161
+<br />Basen mit Tiefe &lt;20: 528
+<br />Prozent L&uuml;cken: 8.57%
+<br />Komplett abgedeckte Gene: 
+<br />Unvollst&auml;ndig abgedeckte Gene (fehlende Basen in bp): CYP7B1 <span style="font-size: 8pt;">(506)</span>, SLC25A15 <span style="font-size: 8pt;">(258)</span>, SPG7 <span style="font-size: 8pt;">(262)</span>
+<p>Details Regionen mit Tiefe &lt;20:
 </p>
+<table>
+<tr><td><b>Gen</b></td><td><b>Basen</b></td><td><b>Chromosom</b></td><td><b>Koordinaten (hg38)</b></td></tr>
+<tr>
+<td>
+CYP7B1</td><td>506</td><td>chr8</td><td>64615713-64615740, 64616216-64616218, 64624393-64624515, 64798456-64798544, 64615713-64615740, 64616216-64616218, 64624383-64624515, 64798446-64798544
+</td>
+</tr>
+<tr>
+<td>
+SLC25A15</td><td>258</td><td>chr13</td><td>40799186-40799314, 40799186-40799314
+</td>
+</tr>
+<tr>
+<td>
+SPG7</td><td>262</td><td>chr16</td><td>89524046-89524104, 89554476-89554542, 89524046-89524104, 89554466-89554542
+</td>
+</tr>
+</table>
+<br />L&uuml;cken die mit Sanger-Sequenzierung geschlossen wurden:<br /><table>
+<tr><td><b>Gen</b></td><td><b>Basen</b></td><td><b>Chromosom</b></td><td><b>Koordinaten (hg38)</b></td></tr>
+<tr>
+<td>SPG7</td><td>59</td><td>chr16</td><td>89524046-89524104</td></tr>
+</table>
+Basen gesamt:59<p>L&uuml;cken die mit visueller Inspektion der Rohdaten &uuml;berpr&uuml;ft wurden:<br /><table>
+<tr><td><b>Gen</b></td><td><b>Basen</b></td><td><b>Chromosom</b></td><td><b>Koordinaten (hg38)</b></td></tr>
+<tr>
+<td>CYP7B1</td><td>28</td><td>chr8</td><td>64615713-64615740</td></tr>
+<tr>
+<td>CYP7B1</td><td>3</td><td>chr8</td><td>64616216-64616218</td></tr>
+</table>
+Basen gesamt:31</p>
+<p>Basen mit Tiefe &lt;20 nach L&uuml;ckenschluss: 438
+<br />Prozent L&uuml;cken nach L&uuml;ckenschluss: 7.11%
+</p></p>
+
+<p><b>Abdeckungsstatistik der RNA-Probe</b>
+<br />Anzahl der Reads: 10.99 Mio
+<br />Durchschnittliche Sequenziertiefe: 15.85
+<br />Durchschnittliche Sequenziertiefe der Housekeeping-Gene: 263.87
+<br />Abgedeckte Gene: 136985
+</p>
+
 <p><b>OMIM Gene und Phenotypen</b>
 </p>
 <table>
