--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -225,30 +225,30 @@ Base sum:31</p>
 <p>Percentage of regions with depth &lt;20 after closing gaps: 15359
 <br />Percentage gaps after closing gaps: 5.66%
 </p></p>
-<p><b>Gap report based on exons</b>
+<p><b>Gap report based on exons of target region</b>
 <br />Genes for which Ensembl transcripts were unsed because not CCDS transcript was available: CYP7B1, SLC25A15, SPG7
-<br />Bases: 6161
+<br />Bases: 5975
 <br />Percentage of regions with depth &lt;20: 528
-<br />Percentage gaps: 8.57%
+<br />Percentage gaps: 8.84%
 <br />Genes without gaps: 
-<br />Genes with incomplete coverage (missing bp in brackets): CYP7B1 <span style="font-size: 8pt;">(506)</span>, SLC25A15 <span style="font-size: 8pt;">(258)</span>, SPG7 <span style="font-size: 8pt;">(262)</span>
+<br />Genes with incomplete coverage (missing bp in brackets): CYP7B1 <span style="font-size: 8pt;">(263)</span>, SLC25A15 <span style="font-size: 8pt;">(129)</span>, SPG7 <span style="font-size: 8pt;">(136)</span>
 <p>Details regions with depth &lt;20:
 </p>
 <table>
 <tr><td><b>Gene</b></td><td><b>Bases</b></td><td><b>Chromosome</b></td><td><b>Coordinates (hg38)</b></td></tr>
 <tr>
 <td>
-CYP7B1</td><td>506</td><td>chr8</td><td>64615713-64615740, 64616216-64616218, 64624393-64624515, 64798456-64798544, 64615713-64615740, 64616216-64616218, 64624383-64624515, 64798446-64798544
+CYP7B1</td><td>263</td><td>chr8</td><td>64615713-64615740, 64616216-64616218, 64624383-64624515, 64798446-64798544
 </td>
 </tr>
 <tr>
 <td>
-SLC25A15</td><td>258</td><td>chr13</td><td>40799186-40799314, 40799186-40799314
+SLC25A15</td><td>129</td><td>chr13</td><td>40799186-40799314
 </td>
 </tr>
 <tr>
 <td>
-SPG7</td><td>262</td><td>chr16</td><td>89524046-89524104, 89554476-89554542, 89524046-89524104, 89554466-89554542
+SPG7</td><td>136</td><td>chr16</td><td>89524046-89524104, 89554466-89554542
 </td>
 </tr>
 </table>
@@ -266,7 +266,7 @@ Base sum:59<p>Gaps checked by visual inspection of raw data:<br /><table>
 </table>
 Base sum:31</p>
 <p>Percentage of regions with depth &lt;20 after closing gaps: 438
-<br />Percentage gaps after closing gaps: 7.11%
+<br />Percentage gaps after closing gaps: 7.33%
 </p></p>
 
 <p><b>Coverage statistics of RNA sample</b>
