--- a/src/cppNGSD-TEST/data_out/germline_report4.html
+++ b/src/cppNGSD-TEST/data_out/germline_report4.html
@@ -225,30 +225,30 @@ Basen gesamt:31</p>
 <p>Basen mit Tiefe &lt;20 nach L&uuml;ckenschluss: 15359
 <br />Prozent L&uuml;cken nach L&uuml;ckenschluss: 5.66%
 </p></p>
-<p><b>L&uuml;ckenreport basierend auf Exons</b>
+<p><b>L&uuml;ckenreport basierend auf Exons der Zielregion</b>
 <br />Gene f&uuml;r die kein CCDS-Transkript vorhanden ist und daher Ensembl-Transkripte genutzt wurden: CYP7B1, SLC25A15, SPG7
-<br />Basen: 6161
+<br />Basen: 5975
 <br />Basen mit Tiefe &lt;20: 528
-<br />Prozent L&uuml;cken: 8.57%
+<br />Prozent L&uuml;cken: 8.84%
 <br />Komplett abgedeckte Gene: 
-<br />Unvollst&auml;ndig abgedeckte Gene (fehlende Basen in bp): CYP7B1 <span style="font-size: 8pt;">(506)</span>, SLC25A15 <span style="font-size: 8pt;">(258)</span>, SPG7 <span style="font-size: 8pt;">(262)</span>
+<br />Unvollst&auml;ndig abgedeckte Gene (fehlende Basen in bp): CYP7B1 <span style="font-size: 8pt;">(263)</span>, SLC25A15 <span style="font-size: 8pt;">(129)</span>, SPG7 <span style="font-size: 8pt;">(136)</span>
 <p>Details Regionen mit Tiefe &lt;20:
 </p>
 <table>
 <tr><td><b>Gen</b></td><td><b>Basen</b></td><td><b>Chromosom</b></td><td><b>Koordinaten (hg38)</b></td></tr>
 <tr>
 <td>
-CYP7B1</td><td>506</td><td>chr8</td><td>64615713-64615740, 64616216-64616218, 64624393-64624515, 64798456-64798544, 64615713-64615740, 64616216-64616218, 64624383-64624515, 64798446-64798544
+CYP7B1</td><td>263</td><td>chr8</td><td>64615713-64615740, 64616216-64616218, 64624383-64624515, 64798446-64798544
 </td>
 </tr>
 <tr>
 <td>
-SLC25A15</td><td>258</td><td>chr13</td><td>40799186-40799314, 40799186-40799314
+SLC25A15</td><td>129</td><td>chr13</td><td>40799186-40799314
 </td>
 </tr>
 <tr>
 <td>
-SPG7</td><td>262</td><td>chr16</td><td>89524046-89524104, 89554476-89554542, 89524046-89524104, 89554466-89554542
+SPG7</td><td>136</td><td>chr16</td><td>89524046-89524104, 89554466-89554542
 </td>
 </tr>
 </table>
@@ -266,7 +266,7 @@ Basen gesamt:59<p>L&uuml;cken die mit visueller Inspektion der Rohdaten &uuml;be
 </table>
 Basen gesamt:31</p>
 <p>Basen mit Tiefe &lt;20 nach L&uuml;ckenschluss: 438
-<br />Prozent L&uuml;cken nach L&uuml;ckenschluss: 7.11%
+<br />Prozent L&uuml;cken nach L&uuml;ckenschluss: 7.33%
 </p></p>
 
 <p><b>Abdeckungsstatistik der RNA-Probe</b>
