GSvar: improved gap recalculation dialog (coding/splicing based).

--- a/src/cppNGSD-TEST/data_out/germline_report2.html
+++ b/src/cppNGSD-TEST/data_out/germline_report2.html
@@ -225,7 +225,7 @@ Basen gesamt:31</p>
 <p>Basen mit Tiefe &lt;20 nach L&uuml;ckenschluss: 15359
 <br />Prozent L&uuml;cken nach L&uuml;ckenschluss: 5.66%
 </p></p>
-<p><b>L&uuml;ckenreport basierend auf Exons der Zielregion</b>
+<p><b>L&uuml;ckenreport basierend auf Exons der Zielregion &#177; 20 Basen</b>
 <br />Gene f&uuml;r die kein CCDS-Transkript vorhanden ist und daher Ensembl-Transkripte genutzt wurden: CYP7B1, SLC25A15, SPG7
 <br />Basen: 5975
 <br />Basen mit Tiefe &lt;20: 528
