--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -225,7 +225,7 @@ Base sum:31</p>
 <p>Percentage of regions with depth &lt;20 after closing gaps: 15359
 <br />Percentage gaps after closing gaps: 5.66%
 </p></p>
-<p><b>Gap report based on exons of target region</b>
+<p><b>Gap report based on exons of target region &#177; 20 Bases</b>
 <br />Genes for which Ensembl transcripts were unsed because not CCDS transcript was available: CYP7B1, SLC25A15, SPG7
 <br />Bases: 5975
 <br />Percentage of regions with depth &lt;20: 528
