Fixed germline report tests

--- a/src/cppNGSD-TEST/data_out/germline_report2.html
+++ b/src/cppNGSD-TEST/data_out/germline_report2.html
@@ -222,6 +222,29 @@ Basen gesamt:59<p>L&uuml;cken die mit visueller Inspektion der Rohdaten &uuml;be
 <td>CYP7B1</td><td>3</td><td>chr8</td><td>64616216-64616218</td></tr>
 </table>
 Basen gesamt:31</p>
+<p>Verbleibende L&uuml;cken nach L&uuml;ckenschluss
+</p>
+<table>
+<tr><td><b>Gen</b></td><td><b>Basen</b></td><td><b>Chromosom</b></td><td><b>Koordinaten (hg38)</b></td></tr>
+<tr>
+<td>
+CYP7B1</td><td>212</td><td>chr8</td><td>64624393-64624515, 64798456-64798544
+</td>
+</tr>
+<tr>
+<td>
+SLC25A15</td><td>129</td><td>chr13</td><td>40799186-40799314
+</td>
+</tr>
+<tr>
+<td>
+SPG7</td><td>67</td><td>chr16</td><td>89554476-89554542
+</td>
+</tr>
+<tr>
+<td>kein &Uuml;berlappung mit Gen</td><td>14951</td><td>-</td><td>-</td>
+</tr>
+</table>
 <p>Basen mit Tiefe &lt;20 nach L&uuml;ckenschluss: 15359
 <br />Prozent L&uuml;cken nach L&uuml;ckenschluss: 5.66%
 </p></p>
@@ -264,6 +287,26 @@ Basen gesamt:59<p>L&uuml;cken die mit visueller Inspektion der Rohdaten &uuml;be
 <td>CYP7B1</td><td>3</td><td>chr8</td><td>64616216-64616218</td></tr>
 </table>
 Basen gesamt:31</p>
+<p>Verbleibende L&uuml;cken nach L&uuml;ckenschluss
+</p>
+<table>
+<tr><td><b>Gen</b></td><td><b>Basen</b></td><td><b>Chromosom</b></td><td><b>Koordinaten (hg38)</b></td></tr>
+<tr>
+<td>
+CYP7B1</td><td>232</td><td>chr8</td><td>64624383-64624515, 64798446-64798544
+</td>
+</tr>
+<tr>
+<td>
+SLC25A15</td><td>129</td><td>chr13</td><td>40799186-40799314
+</td>
+</tr>
+<tr>
+<td>
+SPG7</td><td>77</td><td>chr16</td><td>89554466-89554542
+</td>
+</tr>
+</table>
 <p>Basen mit Tiefe &lt;20 nach L&uuml;ckenschluss: 438
 <br />Prozent L&uuml;cken nach L&uuml;ckenschluss: 7.33%
 </p></p>
