--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -222,6 +222,29 @@ Base sum:59<p>Gaps checked by visual inspection of raw data:<br /><table>
 <td>CYP7B1</td><td>3</td><td>chr8</td><td>64616216-64616218</td></tr>
 </table>
 Base sum:31</p>
+<p>gaps remaining
+</p>
+<table>
+<tr><td><b>Gene</b></td><td><b>Bases</b></td><td><b>Chromosome</b></td><td><b>Coordinates (hg38)</b></td></tr>
+<tr>
+<td>
+CYP7B1</td><td>212</td><td>chr8</td><td>64624393-64624515, 64798456-64798544
+</td>
+</tr>
+<tr>
+<td>
+SLC25A15</td><td>129</td><td>chr13</td><td>40799186-40799314
+</td>
+</tr>
+<tr>
+<td>
+SPG7</td><td>67</td><td>chr16</td><td>89554476-89554542
+</td>
+</tr>
+<tr>
+<td>no gene overlap</td><td>14951</td><td>-</td><td>-</td>
+</tr>
+</table>
 <p>Percentage of regions with depth &lt;20 after closing gaps: 15359
 <br />Percentage gaps after closing gaps: 5.66%
 </p></p>
@@ -264,6 +287,26 @@ Base sum:59<p>Gaps checked by visual inspection of raw data:<br /><table>
 <td>CYP7B1</td><td>3</td><td>chr8</td><td>64616216-64616218</td></tr>
 </table>
 Base sum:31</p>
+<p>gaps remaining
+</p>
+<table>
+<tr><td><b>Gene</b></td><td><b>Bases</b></td><td><b>Chromosome</b></td><td><b>Coordinates (hg38)</b></td></tr>
+<tr>
+<td>
+CYP7B1</td><td>232</td><td>chr8</td><td>64624383-64624515, 64798446-64798544
+</td>
+</tr>
+<tr>
+<td>
+SLC25A15</td><td>129</td><td>chr13</td><td>40799186-40799314
+</td>
+</tr>
+<tr>
+<td>
+SPG7</td><td>77</td><td>chr16</td><td>89554466-89554542
+</td>
+</tr>
+</table>
 <p>Percentage of regions with depth &lt;20 after closing gaps: 438
 <br />Percentage gaps after closing gaps: 7.33%
 </p></p>
