GSvar: merged CNV and SV table in technical report

--- a/src/cppNGSD-TEST/data_out/germline_report1.html
+++ b/src/cppNGSD-TEST/data_out/germline_report1.html
@@ -67,13 +67,9 @@ Teilweise k&ouml;nnen - in Abh&auml;ngigkeit von der Art der genetischen Ver&aum
 <table>
 <tr><td><b>Variante</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Details</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>gnomAD Allelfrequenz<br />(Kontrollkohorte)</b></td><td><b>RNA</b></td></tr>
 <tr><td colspan="8">Keine</td></tr></table>
-<br /><b>Kopienzahlver&auml;nderungen (CNV) nach klinischer Interpretation im Kontext der Fragestellung</b>
+<br /><b>Kopienzahlver&auml;nderungen (CNV) und/oder Strukturver&auml;nderungen (SV) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
-<tr><td><b>CNV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Kopienzahl</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>RNA</b></td></tr>
-<tr><td colspan="8">Keine</td></tr></table>
-<br /><b>Strukturver&auml;nderungen (SV) nach klinischer Interpretation im Kontext der Fragestellung</b>
-<table>
-<tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>CNV/SV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Kopienzahl/Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>RNA</b></td></tr>
 <tr><td colspan="8">Keine</td></tr></table>
 
 <p><b>Polygener Risiko-Score (PRS)</b></p>
