--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -97,9 +97,9 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 </tr>
 <tr><td colspan="8">OMIM ID: 602783 Details: GENE=SPG7 PHENOS=Spastic paraplegia 7,autosomal recessive,607259,Autosomal recessive,Autosomal dominant</td></tr>
 </table>
-<br /><b>List of prioritized copy-number variants</b>
+<br /><b>List of prioritized copy-number variants and/or structural variants</b>
 <table>
-<tr><td><b>CNV</b></td><td><b>Position</b></td><td><b>Size</b></td><td><b>copy-number</b></td><td><b>Genes</b></td><td><b>Class</b></td><td><b>Inheritance</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>CNV/SV</b></td><td><b>Position</b></td><td><b>Size</b></td><td><b>copy-number/genotype</b></td><td><b>Genes</b></td><td><b>Class</b></td><td><b>Inheritance</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>deletion</td>
 <td>chr21:10541092-10649856</td>
@@ -120,10 +120,6 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>n/a</td>
 <td>no splicing effect found in RNA dataset</td>
 </tr>
-</table>
-<br /><b>List of prioritized structural variants</b>
-<table>
-<tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Size</b></td><td><b>Genotype</b></td><td><b>Genes</b></td><td><b>Class</b></td><td><b>Inheritance</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>insertion</td>
 <td>chr1:934143-934144</td>
