--- a/src/cppNGSD-TEST/data_out/germline_report4.html
+++ b/src/cppNGSD-TEST/data_out/germline_report4.html
@@ -97,9 +97,9 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 </tr>
 <tr><td colspan="8">OMIM ID: 602783 Details: GENE=SPG7 PHENOS=Spastic paraplegia 7,autosomal recessive,607259,Autosomal recessive,Autosomal dominant</td></tr>
 </table>
-<br /><b>Kopienzahlver&auml;nderungen (CNV) nach klinischer Interpretation im Kontext der Fragestellung</b>
+<br /><b>Kopienzahlver&auml;nderungen (CNV) und/oder Strukturver&auml;nderungen (SV) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
-<tr><td><b>CNV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Kopienzahl</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>CNV/SV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Kopienzahl/Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>Deletion</td>
 <td>chr21:10541092-10649856</td>
@@ -120,10 +120,6 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>n/a</td>
 <td>kein Splicing-Effekt in RNA-Daten gefunden</td>
 </tr>
-</table>
-<br /><b>Strukturver&auml;nderungen (SV) nach klinischer Interpretation im Kontext der Fragestellung</b>
-<table>
-<tr><td><b>SV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>RNA</b></td></tr>
 <tr>
 <td>Insertion</td>
 <td>chr1:934143-934144</td>
