GSvar: minor change to germline report

--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -61,8 +61,7 @@ p
 <br />&nbsp;&nbsp;&nbsp;&nbsp;- Allele frequency &le; 1.00%
 <br /><br />Small variants in target region: 135
 <br />SNVs/InDels selected for report: 2
-<br />CNVs selected for report: 2
-<br />SVs selected for report: 3
+<br />CNVs/SVs selected for report: 5
 </p>
 <br />If present, the following tables contain: likely pathogenic variants (class 4)<sup>*</sup> and pathogenic variants (class 5)<sup>*</sup>, for which a contribution to the clinical symptoms of the patient is conceivable, and variants of uncertain significance (class 3)<sup>*</sup>, for which a further evaluation of the clinical relevance by follow-up examinations may be useful.
 Depending on the type of genetic alteration, family history and clinical features of the patient further investigations might change the classification of variants.
