--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -42,6 +42,8 @@ p
 <br />sample sex: female
 <br />Processing system: HaloPlex HSP v2
 <br />Processing system type: Panel Haloplex
+<br />Sequencer: MiSeq
+<br />Read length: 158+8+158
 <br />Reference genome: GRCh37
 <br />Date: 19.02.2021
 <br />Analysis pipeline: megSAP 0.2-486-gc928f885
