--- a/src/cppNGSD-TEST/data_out/germline_report4.html
+++ b/src/cppNGSD-TEST/data_out/germline_report4.html
@@ -42,6 +42,8 @@ p
 <br />Geschlecht: weiblich
 <br />Prozessierungssystem: HaloPlex HSP v2
 <br />Prozessierungssystem-Typ: Panel Haloplex
+<br />Sequenziersystem: MiSeq
+<br />Readl&auml;nge: 158+8+158
 <br />Referenzgenom: GRCh37
 <br />Datum: 19.02.2021
 <br />Analysepipeline: megSAP 0.2-486-gc928f885
