added REs to HTML and XML germline report

--- a/src/cppNGSD-TEST/data_out/germline_sheet1.html
+++ b/src/cppNGSD-TEST/data_out/germline_sheet1.html
@@ -287,32 +287,35 @@
     <p><b>Kausale REs:</b>
       <table border='1'>
      <tr>
-       <th>SV</th>
-       <th>Typ</th>
-       <th>Gene</th>
+       <th>RE</th>
+       <th>Genotyp</th>
        <th>Erbgang</th>
        <th>Infos</th>
        <th style='white-space: nowrap'>Kommentar 1. Auswerter</th>
        <th style='white-space: nowrap'>Kommentar 2. Auswerter</th>
-       <th>Klasse</th>
        <th style='white-space: nowrap'>In Report</th>
-       <th>RNA</th>
      </tr>
       </table>
     </p>
     <p><b>Sonstige REs:</b>
       <table border='1'>
      <tr>
-       <th>SV</th>
-       <th>Typ</th>
-       <th>Gene</th>
+       <th>RE</th>
+       <th>Genotyp</th>
        <th>Erbgang</th>
        <th>Ausschlussgrund</th>
        <th style='white-space: nowrap'>Kommentar 1. Auswerter</th>
        <th style='white-space: nowrap'>Kommentar 2. Auswerter</th>
-       <th>Klasse</th>
        <th style='white-space: nowrap'>In Report</th>
-       <th>RNA</th>
+     </tr>
+     <tr>
+       <td>DAB1 - chr1:57367043-57367118/RAAAT</td>
+       <td>15/30</td>
+       <td>n/a</td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td>ja (diagnostic variant)</td>
      </tr>
       </table>
     </p>
