REs can now be part of the germline report (#549)

--- a/src/cppNGSD-TEST/data_out/germline_report1.html
+++ b/src/cppNGSD-TEST/data_out/germline_report1.html
@@ -57,7 +57,7 @@ p
 <br />&nbsp;&nbsp;&nbsp;&nbsp;- Allele frequency &le; 1.00%
 <br /><br />Gefundene SNVs/InDels in Zielregion gesamt: 319
 <br />Anzahl SNVs/InDels ausgew&auml;hlt f&uuml;r Report: 0
-<br />Anzahl CNVs/SVs ausgew&auml;hlt f&uuml;r Report: 0
+<br />Anzahl CNVs/SVs/REs ausgew&auml;hlt f&uuml;r Report: 0
 </p>
 <br />Sofern vorhanden, werden in den nachfolgenden Tabellen erfasst: pathogene Varianten (Klasse 5)<sup>*</sup> und wahrscheinlich pathogene Varianten (Klasse 4)<sup>*</sup>, bei denen jeweils ein Zusammenhang mit der klinischen Fragestellung anzunehmen ist, sowie Varianten unklarer klinischer Signifikanz (Klasse 3)<sup>*</sup> f&uuml;r welche in Zusammenschau von Literatur und Klinik des Patienten ein Beitrag zur Symptomatik denkbar ist und f&uuml;r die gegebenenfalls eine weitere Einordnung der klinischen Relevanz durch Folgeuntersuchungen sinnvoll erscheint.
 Teilweise k&ouml;nnen - in Abh&auml;ngigkeit von der Art der genetischen Ver&auml;nderung, der Familienanamnese und der Klinik der Patientin/des Patienten - weiterf&uuml;hrende Untersuchungen eine &Auml;nderung der Klassifizierung bewirken.
@@ -70,7 +70,7 @@ Teilweise k&ouml;nnen - in Abh&auml;ngigkeit von der Art der genetischen Ver&aum
 <tr><td colspan="8">Keine</td></tr></table>
 <br /><b>Kopienzahlver&auml;nderungen (CNV) und/oder Strukturver&auml;nderungen (SV) nach klinischer Interpretation im Kontext der Fragestellung</b>
 <table>
-<tr><td><b>CNV/SV</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Kopienzahl/Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>RNA</b></td></tr>
+<tr><td><b>CNV/SV/RE</b></td><td><b>Position</b></td><td><b>Gr&ouml;&szlig;e</b></td><td><b>Kopienzahl/Genotyp</b></td><td><b>Gen(e)</b></td><td><b>Klasse</b></td><td><b>Erbgang</b></td><td><b>RNA</b></td></tr>
 <tr><td colspan="8">Keine</td></tr></table>
 
 <p><b>Polygener Risiko-Score (PRS)</b></p>
