--- a/src/cppNGSD-TEST/data_out/germline_sheet1.html
+++ b/src/cppNGSD-TEST/data_out/germline_sheet1.html
@@ -284,6 +284,41 @@
      </tr>
       </table>
     </p>
+    <p><b>Kausale REs:</b>
+      <table border='1'>
+     <tr>
+       <th>RE</th>
+       <th>Genotyp</th>
+       <th>Erbgang</th>
+       <th>Infos</th>
+       <th style='white-space: nowrap'>Kommentar 1. Auswerter</th>
+       <th style='white-space: nowrap'>Kommentar 2. Auswerter</th>
+       <th style='white-space: nowrap'>In Report</th>
+     </tr>
+      </table>
+    </p>
+    <p><b>Sonstige REs:</b>
+      <table border='1'>
+     <tr>
+       <th>RE</th>
+       <th>Genotyp</th>
+       <th>Erbgang</th>
+       <th>Ausschlussgrund</th>
+       <th style='white-space: nowrap'>Kommentar 1. Auswerter</th>
+       <th style='white-space: nowrap'>Kommentar 2. Auswerter</th>
+       <th style='white-space: nowrap'>In Report</th>
+     </tr>
+     <tr>
+       <td>DAB1 - chr1:57367043-57367118/RAAAT</td>
+       <td>15/30</td>
+       <td>n/a</td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td>ja (diagnostic variant)</td>
+     </tr>
+      </table>
+    </p>
     <p><b>Sonstige kausale Varianten:</b>
       <table border='1'>
      <tr>
