--- a/src/cppNGSD-TEST/data_out/germline_report4.html
+++ b/src/cppNGSD-TEST/data_out/germline_report4.html
@@ -150,10 +150,10 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 </tr>
 <tr>
 <td>Repeat-Expansion</td>
-<td>DAB1 - chr1:57367043-57367118/RAAAT</td>
+<td>chr1:57367043-57367118</td>
 <td></td>
 <td>15/30</td>
-<td></td>
+<td>DAB1/RAAAT</td>
 <td></td>
 <td>n/a</td>
 <td></td>
