--- a/src/cppNGSD-TEST/data_out/germline_report4.html
+++ b/src/cppNGSD-TEST/data_out/germline_report4.html
@@ -337,7 +337,7 @@ SPG7</td><td>77</td><td>chr16</td><td>89554466-89554542
 <p><b>Polygener Risiko-Score (PRS)</b></p>
 <table>
 <tr><td><b>Erkrankung</b></td><td><b>PRS</b></td><td><b>Publikation</b></td><td><b>Score</b></td><td><b>Z-Score</b></td><td><b>Population (gesch&auml;tzt aus NGS)</b></td></tr>
-<tr><td>Breast Cancer</td><td>PGS000004</td><td>Mavaddat N et al. Am J Hum Genet (2018). doi:10.1016/j.ajhg.2018.11.002</td><td>-0.2773</td><td>n/a</td><td>European</td></tr></table>
+<tr><td>Breast Cancer</td><td>PGS000004</td><td>Mavaddat N et al. Am J Hum Genet (2018). doi:10.1016/j.ajhg.2018.11.002</td><td>-0.2773</td><td>0.240</td><td>European</td></tr></table>
 <p>Die Einsch&auml;tzung der klinischen Bedeutung eines PRS ist nur unter Verwendung eines entsprechenden validierten Risiko-Kalkulations-Programms und unter Ber&uuml;cksichtigung der ethnischen Zugeh&ouml;rigkeit m&ouml;glich (z.B. CanRisk.org f&uuml;r Brustkrebs).</p>
 	</body>
 </html>
