GSvar: variant sheet now contains genotype details from report configuration (de-novo, mosaic, comp-het)

--- a/src/cppNGSD-TEST/data_out/germline_sheet1.html
+++ b/src/cppNGSD-TEST/data_out/germline_sheet1.html
@@ -107,7 +107,7 @@
      <tr>
        <td>SPG7</td>
        <td>coding_sequence_variant&amp;missense_variant&amp;protein_altering_variant</td>
-       <td>het</td>
+       <td>het (de-novo) (mosaic)</td>
        <td style='white-space: nowrap'>chr16:89531961-89531961 G>A</td>
        <td>n/a</td>
        <td>ENST00000268704.1:c.1045G>A</td>
@@ -144,7 +144,7 @@
      <tr>
        <td>SLC25A15</td>
        <td>coding_sequence_variant&amp;missense_variant&amp;protein_altering_variant</td>
-       <td>hom</td>
+       <td>hom (comp-het)</td>
        <td style='white-space: nowrap'>chr13:40793233-40793233 T>A (manually curated)</td>
        <td>n/a</td>
        <td>ENST00000338625.1:c.7T>A</td>
@@ -192,7 +192,7 @@
      </tr>
      <tr>
        <td>chr21:10541092-10649856</td>
-       <td>1</td>
+       <td>1 (comp-het)</td>
        <td>IGHV1OR21-1, TPTE</td>
        <td>n/a</td>
        <td></td>
@@ -204,7 +204,7 @@
      </tr>
      <tr>
        <td>chr21:26799369-26991734 (manually curated)</td>
-       <td>0</td>
+       <td>0 (comp-het)</td>
        <td></td>
        <td>n/a</td>
        <td></td>
