update to RE dialog and search (#578)

--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -152,8 +152,8 @@ chr16:89531961&nbsp;G&nbsp;&gt;&nbsp;A</td><td>het (de-novo) (mosaic)</td>
 <td>repeat expansion</td>
 <td>chr1:57367043-57367118</td>
 <td></td>
-<td>15/30</td>
-<td>DAB1/RAAAT</td>
+<td>expanded</td>
+<td>DAB1</td>
 <td></td>
 <td>n/a</td>
 <td></td>
