GSvar: added sequencing run date to germline report

--- a/src/cppNGSD-TEST/data_out/germline_report3.html
+++ b/src/cppNGSD-TEST/data_out/germline_report3.html
@@ -43,6 +43,7 @@ p
 <br />Processing system: HaloPlex HSP v2
 <br />Processing system type: Panel Haloplex
 <br />Sequencer: MiSeq
+<br />Date of the sequencing run: 18.03.2025
 <br />Read length: 158+8+158
 <br />Reference genome: GRCh37
 <br />Date: 19.02.2021
