--- a/src/cppNGSD-TEST/data_out/germline_report2.html
+++ b/src/cppNGSD-TEST/data_out/germline_report2.html
@@ -43,6 +43,7 @@ p
 <br />Prozessierungssystem: HaloPlex HSP v2
 <br />Prozessierungssystem-Typ: Panel Haloplex
 <br />Sequenziersystem: MiSeq
+<br />Datum des Sequenzierlaufs: 18.03.2025
 <br />Readl&auml;nge: 158+8+158
 <br />Referenzgenom: GRCh37
 <br />Datum: 19.02.2021
