GSvarServer: fixed the links on the server index page

--- a/src/GSvarServer/assets/client/info.html
+++ b/src/GSvarServer/assets/client/info.html
@@ -9,8 +9,8 @@
         The server is usually accessed via a GSvar client only!
         </p>
         <p>
-        Information about the server can be found on the <a href='info'>info</a> page.
-        Information about the API endpoints can be found on the <a href='help'>help</a> page.
+        Information about the server can be found on the <a href='api/info'>info</a> page.
+        Information about the API endpoints can be found on the <a href='api/help'>help</a> page.
         </p>
     </body>
 </html>
